Added support for imagePullSecrets

--- a/manager/src/main/resources/k8s/templates/streamsApp/deployment.th.yaml
+++ b/manager/src/main/resources/k8s/templates/streamsApp/deployment.th.yaml
@@ -48,3 +48,5 @@ spec:
             requests:
               memory: [(${resourceConfig.memory.request})]
               cpu: [(${resourceConfig.cpu.request})]
+      imagePullSecrets: [# th:if="${imagePullSecret}"]
+        - name: [(${imagePullSecret})] [/]
