changes according to feedback from PR

--- a/manager/src/main/resources/k8s/templates/streamsApp/deployment.th.yaml
+++ b/manager/src/main/resources/k8s/templates/streamsApp/deployment.th.yaml
@@ -48,5 +48,6 @@ spec:
             requests:
               memory: [(${resourceConfig.memory.request})]
               cpu: [(${resourceConfig.cpu.request})]
-      imagePullSecrets: [# th:if="${imagePullSecret}"]
+      [# th:if="${imagePullSecret}"]
+      imagePullSecrets:
         - name: [(${imagePullSecret})] [/]
