--- a/manager/src/main/resources/k8s/templates/streamsApp/deployment.th.yaml
+++ b/manager/src/main/resources/k8s/templates/streamsApp/deployment.th.yaml
@@ -48,3 +48,7 @@ spec:
             requests:
               memory: [(${resourceConfig.memory.request})]
               cpu: [(${resourceConfig.cpu.request})]
+      [# th:if="${imagePullSecret}"]
+      imagePullSecrets:
+        - name: [(${imagePullSecret})] [/]
+
