Add default to helm chart

--- a/deployment/helm/quick/values.yaml
+++ b/deployment/helm/quick/values.yaml
@@ -34,3 +34,4 @@ quickConfig:
   QUICK_TOPIC_REGISTRY_TOPIC_NAME: __topic-registry
   QUICK_TOPIC_REGISTRY_PARTITIONS: "3"
   QUICK_TOPIC_REGISTRY_REPLICATION_FACTOR: "1"
+  QUICK_SCHEMA_FORMAT: "Avro"
