--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -77,6 +77,7 @@ nav:
           - user/reference/helm-chart.md
           - user/reference/configuration.md
           - user/reference/dependency-versions.md
+          - user/reference/breaking-changes.md
 
   - Developer guide:
       - developer/architecture.md
