Fix label names in changelog generator config
In the latest release, the generator emitted the following warning: https://github.com/bakdata/quick/runs/7422554697?check_suite_focus=true#step:7:1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,8 +59,8 @@ jobs:
           issuesWoLabels: "false"
           futureRelease: "${{ steps.create-tag.outputs.tag }}"
           issuesLabel: "**Miscellaneous:**"
-          bug-labels: "bug,type/bug"
-          enhancement-labels: "enhancement,type/enhancement"
+          bugLabels: "type/bug"
+          enhancementLabels: "type/enhancement"
           httpCache: "true"
           verbose: "true"
           addSections: |
