--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.caching=false
+org.gradle.caching=true
 org.gradle.parallel=true
 #----- Sonar
 # systemProp.sonar.host.url=http://localhost:9000
