--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,13 +5,13 @@ jackson = "2.13.3"
 
 micronaut = "3.6.0"
 
-kafka = "2.7.1"
-streams_bootstrap = "1.7.0"
-confluent = "6.1.1"
-avro = "1.9.2"
-protobuf = "3.20.1"
-fluent_streams = "2.3.1"
-reactive_kafka = "1.3.4"
+kafka = "3.2.0" # 3.2.0
+streams_bootstrap = "2.3.0" #2.3.0
+confluent = "7.2.1" # 7.2.1
+avro = "1.11.1" # 1.11.1
+protobuf = "3.21.5" # 3.21.5
+fluent_streams = "2.7.0" # 2.7.0
+reactive_kafka = "1.3.12" # 1.3.12
 
 guava = "29.0-jre"
 graphql = "16.2"
@@ -23,12 +23,15 @@ okhttp = "4.9.1"
 caffeine = "3.0.2"
 spotbugs = "4.7.1"
 graphql_extended_scalars = "18.1"
+apache_commons_lang = "3.12.0"
+jooq_jool = "0.9.14"
+
 
 junit = "5.7.2"
 mockito = "3.11.1"
 assertj = "3.20.1"
 awaitly = "4.1.0"
-kafka_junit = "2.7.0" # generally same as Kafka, there are some exception however
+kafka_junit = "3.2.0" # 3.2.0
 
 # ---------Plugins---------
 gradleAvro = "1.2.0"
@@ -48,17 +51,17 @@ jackson_databind = { group = "com.fasterxml.jackson.dataformat", name = "jackson
 
 # ------Micronaut------
 javax = { group = "javax.annotation", name = "javax.annotation-api" }
-micronaut_http_client = { group = "io.micronaut", name = "micronaut-http-client" }
-micronaut_http_server = { group = "io.micronaut", name = "micronaut-http-server-netty" }
+micronaut_httpClient = { group = "io.micronaut", name = "micronaut-http-client" }
+micronaut_httpServer = { group = "io.micronaut", name = "micronaut-http-server-netty" }
 micronaut_inject = { group = "io.micronaut", name = "micronaut-inject" }
 micronaut_validation = { group = "io.micronaut", name = "micronaut-validation" }
 
-micronaut_inject_java = { group = "io.micronaut", name = "micronaut-inject-java" }
+micronaut_injectJava = { group = "io.micronaut", name = "micronaut-inject-java" }
 micronaut_graphql = { group = "io.micronaut.graphql", name = "micronaut-graphql" }
 micronaut_management = { group = "io.micronaut", name = "micronaut-management" }
 micronaut_prometheus = { group = "io.micronaut.micrometer", name = "micronaut-micrometer-registry-prometheus" }
 
-security = { group = "io.micronaut.security", name = "micronaut-security" }
+micronaut_security = { group = "io.micronaut.security", name = "micronaut-security" }
 
 micronaut_picocli = { group = "io.micronaut.picocli", name = "micronaut-picocli" }
 micronaut_rxjava = { group = "io.micronaut.rxjava2", name = "micronaut-rxjava2" }
@@ -88,6 +91,8 @@ caffeine = { group = "com.github.ben-manes.caffeine", name = "caffeine", version
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 spotbugs = { group = "com.github.spotbugs", name = "spotbugs-annotations", version.ref = "spotbugs" }
 graphql_extended_scalars = { group = "com.graphql-java", name = "graphql-java-extended-scalars", version.ref = "graphql_extended_scalars" }
+apache_commons_lang = { group = "org.apache.commons", name = "commons-lang3", version.ref = "apache_commons_lang"}
+jooq_jool = { group = "org.jooq", name = "jool-java-8", version.ref = "jooq_jool"}
 
 # ------Tests------
 junit_api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
@@ -97,11 +102,11 @@ assertj = { group = "org.assertj", name = "assertj-core", version.ref = "assertj
 mockito = { group = "org.mockito", name = "mockito-junit-jupiter", version.ref = "mockito" }
 awaitly = { group = "org.awaitility", name = "awaitility", version.ref = "awaitly" }
 micronaut_junit = { group = "io.micronaut.test", name = "micronaut-test-junit5" }
-micronaut_rest_assured = {group = "io.micronaut.test", name = "micronaut-test-rest-assured"}
+micronaut_restAssured = {group = "io.micronaut.test", name = "micronaut-test-rest-assured"}
 fluent_kafka_streams = { group = "com.bakdata.fluent-kafka-streams-tests", name = "fluent-kafka-streams-tests-junit5", version.ref = "fluent_streams" }
 schema_registry_mock = { group = "com.bakdata.fluent-kafka-streams-tests", name = "schema-registry-mock-junit5", version.ref = "fluent_streams" }
 kube_mock_server = { group = "io.fabric8", name = "kubernetes-server-mock", version.ref = "kube_manager" }
-mockwebserver = { group = "com.squareup.okhttp3", name = "mockwebserver", version.ref = "okhttp" }
+mockWebserver = { group = "com.squareup.okhttp3", name = "mockwebserver", version.ref = "okhttp" }
 kafka_junit = { group = "net.mguenther.kafka", name = "kafka-junit", version.ref = "kafka_junit" }
 # required for testFixtures, otherwise included with micronaut
 rxjava = { group = "io.reactivex.rxjava2", name = "rxjava" }
