--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.caching=false
-org.gradle.parallel=true
+org.gradle.parallel=flase
 #----- Sonar
 # systemProp.sonar.host.url=http://localhost:9000
 # systemProp.sonar.login=<token>
