Down grade Confluent Platform to 7.1.3

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-org.gradle.caching=false
-org.gradle.parallel=flase
+org.gradle.caching=true
+org.gradle.parallel=flase # Embedded Kafka does not reliably work in parallel since Kafka 3.0
 #----- Sonar
 # systemProp.sonar.host.url=http://localhost:9000
 # systemProp.sonar.login=<token>
