--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,13 +5,13 @@ jackson = "2.13.3"
 
 micronaut = "3.6.0"
 
-kafka = "3.2.0" # 3.2.0
-streams_bootstrap = "2.3.0" #2.3.0
-confluent = "7.2.1" # 7.2.1
-avro = "1.11.1" # 1.11.1
-protobuf = "3.21.5" # 3.21.5
-fluent_streams = "2.7.0" # 2.7.0
-reactive_kafka = "1.3.12" # 1.3.12
+kafka = "3.1.0"
+streams_bootstrap = "2.2.0"
+confluent = "7.1.3"
+avro = "1.11.1"
+protobuf = "3.21.5"
+fluent_streams = "2.6.0"
+reactive_kafka = "1.3.12"
 
 guava = "29.0-jre"
 graphql = "16.2"
