Add range to topic directive with range data fetcher

--- a/gateway/src/test/resources/application-test.yaml
+++ b/gateway/src/test/resources/application-test.yaml
@@ -11,11 +11,12 @@ endpoints:
     enabled: false
 
 quick:
+  kafka:
+    bootstrap-server: dummy:9092
+    schema-registry-url: http://test:8081
   definition:
     path: "definition/definition.yaml"
   apikey:
     test_key
-  kafka:
-    bootstrap-server: dummy:123
   mirror:
     prefix: "" # prefix must be empty, as the host is simply 'localhost' and not for example 'quick-mirror-localhost'
