Remove unused Avro files

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.caching=true
+org.gradle.caching=false
 org.gradle.parallel=flase # Embedded Kafka does not reliably work in parallel since Kafka 3.0
 #----- Sonar
 # systemProp.sonar.host.url=http://localhost:9000
