--- a/.github/actions/test-source/action.yml
+++ b/.github/actions/test-source/action.yml
@@ -23,10 +23,14 @@ runs:
         restore-keys: |
           ${{ runner.os }}-gradle-
 
+    - name: Run build to check if there are any checkstyle issues
+      shell: bash
+      run: ./gradlew build
+    
     - name: Run unit tests
       shell: bash
       run: ./gradlew unitTest
-
+      
     - name: Run integration tests
       shell: bash
       run: |
