Update test action with checkstyle

--- a/.github/actions/test-source/action.yml
+++ b/.github/actions/test-source/action.yml
@@ -23,6 +23,14 @@ runs:
         restore-keys: |
           ${{ runner.os }}-gradle-
 
+    - name: checkstyle main
+      shell: bash
+      run: ./gradlew checkstyleMain
+
+    - name: checkstyle test
+      shell: bash
+      run: ./gradlew checkstyleTest
+
     - name: Run unit tests
       shell: bash
       run: ./gradlew unitTest
