Fail a build if it does not meet the checkstyle requirements (#70)
This resolves #64, however it proposes a different approach. Instead of
creating a new GitHub Action, it changes the settings of the checkstyle
plugin so that it does not permit any error and warnings.

--- a/.github/actions/test-source/action.yml
+++ b/.github/actions/test-source/action.yml
@@ -23,10 +23,18 @@ runs:
         restore-keys: |
           ${{ runner.os }}-gradle-
 
+    - name: checkstyle main
+      shell: bash
+      run: ./gradlew checkstyleMain
+
+    - name: checkstyle test
+      shell: bash
+      run: ./gradlew checkstyleTest
+
     - name: Run unit tests
       shell: bash
       run: ./gradlew unitTest
-
+      
     - name: Run integration tests
       shell: bash
       run: |
