--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -33,8 +33,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup justfile
-        uses: extractions/setup-justfile@v1
+      - name: Setup just
+        uses: extractions/setup-just@v1
         env:
           GITHUB_TOKEN: ${{ secrets.github-token }}
         with:
