--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -65,6 +65,7 @@ nav:
             - user/getting-started/working-with-quick/ingest-data.md
             - user/getting-started/working-with-quick/query-data.md
             - user/getting-started/working-with-quick/subscriptions.md
+            - user/getting-started/working-with-quick/multi-subscriptions.md
           - user/getting-started/teardown-resources.md
       - Examples:
           - user/examples/index.md
@@ -86,5 +87,6 @@ nav:
       - developer/operations.md
       - developer/cli.md
       - developer/notice.md
+      - developer/multi-subscription-details.md
   - Changelog: changelog.md
   - Roadmap: roadmap.md
