--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,12 +5,12 @@ jackson = "2.13.3"
 
 micronaut = "3.6.0"
 
-kafka = "3.1.0"
-streamsBootstrap = "2.2.0"
-confluent = "7.1.3"
+kafka = "3.2.0"
+streamsBootstrap = "2.3.0"
+confluent = "7.2.2"
 avro = "1.11.1"
 protobuf = "3.21.5"
-fluent_streams = "2.6.0"
+fluent_streams = "2.7.1"
 reactiveKafka = "1.3.12"
 
 guava = "29.0-jre"
@@ -29,7 +29,7 @@ junit = "5.7.2"
 mockito = "4.8.0"
 assertj = "3.20.1"
 awaitly = "4.1.0"
-kafka_junit = "3.2.0" # 3.2.0
+kafka_junit = "3.2.0"
 
 # ---------Plugins---------
 gradleAvro = "1.2.0"
