Multisubscription documentation with tests (#89)
PR for #85 and #87.

Co-authored-by: Torben Meyer <torben.meyer@bakdata.com>
Co-authored-by: Ramin Gharib <ramin.gharib@bakdata.com>
Co-authored-by: Christoph Böhm <christoph.boehm@bakdata.com>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -65,6 +65,7 @@ nav:
             - user/getting-started/working-with-quick/ingest-data.md
             - user/getting-started/working-with-quick/query-data.md
             - user/getting-started/working-with-quick/subscriptions.md
+            - user/getting-started/working-with-quick/multi-subscriptions.md
             - user/getting-started/working-with-quick/range-query.md
           - user/getting-started/teardown-resources.md
       - Examples:
@@ -87,6 +88,7 @@ nav:
       - developer/operations.md
       - developer/cli.md
       - developer/notice.md
+      - developer/multi-subscription-details.md
       - developer/range-query-details.md
   - Changelog: changelog.md
   - Roadmap: roadmap.md
