--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,33 +1,38 @@
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.0.4
 future==0.18.2
 ghp-import==2.0.2
+idna==3.4
 importlib-metadata==4.11.3
 Jinja2==3.0.3
-joblib==1.1.0
+joblib==1.2.0
 livereload==2.6.3
 lunr==0.5.8
 Markdown==3.3.6
 MarkupSafe==2.1.1
 mergedeep==1.3.4
 mike==1.1.2
-mkdocs==1.2.4
+mkdocs==1.4.1
 mkdocs-macros-plugin==0.7.0
-mkdocs-material==8.2.5
+mkdocs-material==8.5.6
 mkdocs-material-extensions==1.0.3
 nltk==3.7
 packaging==21.3
-Pygments==2.11.2
+Pygments==2.13.0
 pygments-graphql==1.0.0
-pymdown-extensions==9.3
+pymdown-extensions==9.6
 pyparsing==3.0.7
 python-dateutil==2.8.2
 PyYAML==6.0
 pyyaml_env_tag==0.1
 regex==2022.3.15
+requests==2.28.1
 six==1.16.0
 termcolor==1.1.0
 tornado==6.1
 tqdm==4.63.0
+urllib3==1.26.12
 verspec==0.1.0
 watchdog==2.1.6
 zipp==3.7.0
